@@ -24,4 +24,4 @@ CREATE TABLE questions (
 --
 
 INSERT INTO questions VALUES (0,'What\'s in a namespace?','0','0','1','0');
-INSERT INTO questions VALUES (1,'A question with an example','1','1','0','0');
+INSERT INTO questions VALUES (1,'A question with an example','1','1','1','0');
